[package]
name = "drl"
version = "0.1.0"
authors = ["Axel COCAT", "Yohann JERRAIN"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
ndarray = "0.13.0"
ndarray-rand = "0.11.0"
ndarray-stats = "0.3.0"
rand = "0.7.3"
ffi-csharp = { path = "../ffi-csharp" }
